--- a/Public/manifest.json
+++ b/Public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "FS",
   "version": "1",
   "icons": {
@@ -59,6 +59,9 @@
     },
     "johnCena": {
       "description": "John Cena Time is Now"
+    },
+    "cartmanUpset": {
+      "description": "Cartman is upset"
     }
 
   }
